# RenjuTransformer

./: .gitignore  README.md  mcts.cpp  output.csv  pyproject.toml  renju-mtcs.py  renju-transformer.py  synthetic-data.csv
config/: config.yaml
config/data/: default.yaml
config/generate/: default.yaml
config/mlflow/: local.yaml
config/model/: transformer.yaml
config/optimizer/: adamw.yaml
config/predict/: default.yaml
config/train/: default.yaml
docs/: index.html  renju_transformer.onnx  visualize.html
models/: pretrained.pt
scripts/: export_onnx.py
src/renju_transformer/: __init__.py  dataset.py  evaluate.py  generate.py  model.py  predict.py  rules.py  tokenizer.py  train.py  utils.py
tests/: test_dataset.py
web/: index.html  renju_onnx.js
