[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "renju-transformer"
version = "0.1.0"
description = "TransformerEncoder training pipeline for Renju next-move prediction"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "hydra-core>=1.3,<2.0",
    "mlflow>=3.1,<4.0",
    "numpy>=2.2,<3.0",
    "torch>=2.8,<3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
