[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "renju-transformer"
version = "0.1.0"
description = "TransformerEncoder training pipeline for Renju next-move prediction"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "torch==2.9.0+cu130; sys_platform == 'win32' or sys_platform == 'linux'",
    "torch==2.9.0; sys_platform == 'darwin'",
    "hydra-core>=1.3,<2.0",
    "mlflow>=3.1,<4.0",
    "numpy>=2.2,<3.0",
    "accelerate>=1.0.0",
    "safetensors>=0.7.0",
    "tqdm>=4.67.1",
    "onnx>=1.21.0",
    "onnxscript>=0.6.2",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
environments = [
    "sys_platform == 'win32' or sys_platform == 'linux'",
    "sys_platform == 'darwin'",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[dependency-groups]
dev = ["pytest>=8.0.0", "ruff>=0.14.10"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501", # 行長は formatter に任せる
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
